config/01-api/10-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: quay.io/sm43/goa-gorm-api:v1
          ports:
            - containerPort: 8080
