config/01-api/11-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
