config/01-api/12-api-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  labels:
    app: api
spec: 
  to:
    kind: Service
    name: api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
